counter.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-c
  labels:
    app: nginx-c
    service: nginx-c
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: nginx-c
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-c
  labels:
    app: nginx-c
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-c
      version: v1
  template:
    metadata:
      labels:
        app: nginx-c
        version: v1
    spec:
      containers:
      - name: nginx-c
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
          subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf # place configmap `nginx-conf` on /etc/nginx
---
##################################################################################################
# redis service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    service: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    name: redis
  selector:
    app: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      version: v1
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
---
##################################################################################################
# backend service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-v1
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - name: backend
        image: sumanta23/counter:latest
        args: 
          - node 
          - backend.js
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-v2
  labels:
    app: backend
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      containers:
      - name: backend
        image: sumanta23/counter:latest
        args:
          - node
          - backend2.js
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
##################################################################################################
# frontend service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: counter
  labels:
    app: counter
    service: counter
spec:
  clusterIP: 10.100.224.73
  ports:
  - port: 3000
    name: http
  selector:
    app: counter
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: counter
  labels:
    app: counter
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter
      version: v1
  template:
    metadata:
      labels:
        app: counter
        version: v1
    spec:
      containers:
      - name: counter
        image: sumanta23/counter:latest
        args: 
          - node 
          - server.js
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
