c-routing.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: counter
spec:
  host: counter
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-c
spec:
  host: nginx-c
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - match:
    - x-app-user:
        exact: jason
    route:
      - destination:
          host: backend
          subset: v2
  - route:
    - destination:
        host: backend
        subset: v2
      weight: 25
    - destination:
        host: backend
        subset: v1
      weight: 75
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter
spec:
  hosts:
  - counter
  http:
  - route:
    - destination:
        host: counter
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-c
spec:
  hosts:
  - nginx-c
  http:
  - route:
    - destination:
        host: nginx-c
        subset: v1
